# viam-orb-slam3

./: .canon.yaml  .gitignore  .gitmodules  Makefile  README.md  TODO  builtin_helpers.go  builtin_helpers_test.go  canon.make  go.mod  go.sum  integration_test.go  orbslam_yaml.go  orbslam_yaml_test.go  viam-orb-slam3.go  viam-orb-slam3_test.go
.artifact/: tree.json
.github/: actionlint.yml
.github/workflows/: appimage.yml  main.yml  pullrequest.yml  test.yml
buf/: buf.gen.yaml  buf.grpc.gen.yaml
config/: config.go  config_test.go
dataprocess/: dataprocess.go  dataprocess_test.go
etc/: .gitignore  golangci.yaml
etc/packaging/appimages/: orb-slam3-module-aarch64.yml  orb-slam3-module-x86_64.yml  orb_grpc_server-aarch64.yml  orb_grpc_server-x86_64.yml  package_release_module.sh  package_release_orb.sh
internal/mono/: mono_test.go
internal/rgbd/: rgbd.go  rgbd_test.go
internal/testhelper/: testhelper.go
module/: main.go  module.go  sample.json  sample_intelrealsense_linux.json  sample_webcam_linux.json
sensors/depth/: depth.go
sensors/lidar/: lidar.go  lidar_test.go
sensors/rgb/: rgb.go
sensors/utils/: utils.go
testhelper/: testhelper.go
tools/: tools.go
utils/: utils.go  utils_test.go
viam-orb-slam3/: CMakeLists.txt  README.md  build_orbslam.sh  orbslam_server_v1.cc  orbslam_server_v1.h  orbslam_server_v1_main.cc  orbslam_server_v1_test.cc  setup_orbslam.sh  setup_orbslam_macos.sh  test_orbslam.sh
viam-orb-slam3/scripts/: build_orbslam.sh  setup_orbslam_linux.sh  setup_orbslam_macos.sh  test_orbslam.sh
